--- a/src/CssDialog/CssDialog.csproj
+++ b/src/CssDialog/CssDialog.csproj
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build" ToolsVersion="4.0">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build" ToolsVersion="4.0">
   <PropertyGroup>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -31,7 +32,7 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <TargetFrameworkProfile/>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -244,13 +245,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Prince.dll</HintPath>
     </Reference>
-    <Reference Include="System"/>
-    <Reference Include="System.Configuration"/>
-    <Reference Include="System.Data"/>
-    <Reference Include="System.Drawing"/>
-    <Reference Include="System.Web.Extensions"/>
-    <Reference Include="System.Windows.Forms"/>
-    <Reference Include="System.Xml"/>
+    <Reference Include="System" />
+    <Reference Include="System.Configuration" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AboutPw.cs">
@@ -265,11 +266,11 @@
     <Compile Include="ConfigurationTool.Designer.cs">
       <DependentUpon>ConfigurationTool.cs</DependentUpon>
     </Compile>
-    <Compile Include="ConfigurationToolBL.cs"/>
+    <Compile Include="ConfigurationToolBL.cs" />
     <Compile Include="Contents.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ComboBoxItem.cs"/>
+    <Compile Include="ComboBoxItem.cs" />
     <Compile Include="ExportDlg.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -282,27 +283,16 @@
     <Compile Include="ExportThroughPathway.Designer.cs">
       <DependentUpon>ExportThroughPathway.cs</DependentUpon>
     </Compile>
-    <Compile Include="FeatureSheet.cs"/>
-    <Compile Include="FileHead.cs"/>
+    <Compile Include="FeatureSheet.cs" />
+    <Compile Include="FileHead.cs" />
     <Compile Include="frmSplash.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmSplash.designer.cs">
       <DependentUpon>frmSplash.cs</DependentUpon>
     </Compile>
-    <Compile Include="IExportContents.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="IExporter.cs"/>
-    <Compile Include="IInProcess.cs"/>
-    <Compile Include="InProcess.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="InProcess.Designer.cs">
-      <DependentUpon>InProcess.cs</DependentUpon>
-    </Compile>
-    <Compile Include="IScriptureContents.cs"/>
-    <Compile Include="LocalizeItems.cs"/>
+    <Compile Include="IScriptureContents.cs" />
+    <Compile Include="LocalizeItems.cs" />
     <Compile Include="OrganizationNameDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -312,7 +302,7 @@
     <Compile Include="Pdf.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Preview.cs"/>
+    <Compile Include="Preview.cs" />
     <Compile Include="PreviewConfig.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -331,7 +321,7 @@
     <Compile Include="PrintVia.Designer.cs">
       <DependentUpon>PrintVia.cs</DependentUpon>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs"/>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
@@ -353,8 +343,8 @@
     <Compile Include="SelectOrganizationDialog.Designer.cs">
       <DependentUpon>SelectOrganizationDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="SettingsValidator.cs"/>
-    <Compile Include="SettingsVersionControl.cs"/>
+    <Compile Include="SettingsValidator.cs" />
+    <Compile Include="SettingsVersionControl.cs" />
     <Compile Include="UILanguageDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -380,10 +370,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmSplash.resx">
       <DependentUpon>frmSplash.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="InProcess.resx">
-      <DependentUpon>InProcess.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="OrganizationNameDialog.resx">
@@ -421,7 +407,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings1.Designer.cs</LastGenOutput>
     </None>
-    <None Include="Resources\LayoutTableTwoColumn.png"/>
+    <None Include="Resources\LayoutTableTwoColumn.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CssParser\CssParser.csproj">
@@ -442,13 +428,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\epub_logo_color.png"/>
-    <None Include="Resources\DocumentTools.png"/>
-    <None Include="Resources\draw-text.png"/>
-    <None Include="Resources\cell.png"/>
+    <None Include="Resources\epub_logo_color.png" />
+    <None Include="Resources\DocumentTools.png" />
+    <None Include="Resources\draw-text.png" />
+    <None Include="Resources\cell.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\SIL-Logo-No-Tag-Color.gif"/>
+    <None Include="Resources\SIL-Logo-No-Tag-Color.gif" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
@@ -468,33 +454,33 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\go-down.png"/>
+    <None Include="Resources\go-down.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\go-up.png"/>
+    <None Include="Resources\go-up.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\SIL_Color_Logo.jpg"/>
+    <None Include="Resources\SIL_Color_Logo.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\configure.ico"/>
+    <None Include="Resources\configure.ico" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="icon.ico"/>
+    <None Include="icon.ico" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\sil-bw-logoBig.jpg"/>
+    <None Include="Resources\sil-bw-logoBig.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\sil-bw-logo.jpg"/>
+    <None Include="Resources\sil-bw-logo.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Help.Image.png"/>
+    <None Include="Resources\Help.Image.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\2014_sil_logo.png"/>
+    <None Include="Resources\2014_sil_logo.png" />
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets"/>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
