--- a/src/OpenOfficeConvert/OpenOfficeConvert.csproj
+++ b/src/OpenOfficeConvert/OpenOfficeConvert.csproj
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build" ToolsVersion="4.0">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -31,7 +32,7 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile/>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -208,31 +209,31 @@
     <CodeAnalysisRuleDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    <Reference Include="System.Drawing"/>
-    <Reference Include="System.Windows.Forms"/>
-    <Reference Include="System.Xml"/>
+    <Reference Include="System" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileSplit.cs"/>
-    <Compile Include="ModifyOOContent.cs"/>
-    <Compile Include="ModifyOOStyles.cs"/>
+    <Compile Include="FileSplit.cs" />
+    <Compile Include="ModifyOOContent.cs" />
+    <Compile Include="ModifyOOStyles.cs" />
     <Compile Include="OldStyles.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="OOContent.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="OOMetaXML.cs"/>
-    <Compile Include="OOExportOpenOffice.cs"/>
-    <Compile Include="OOStyleBase.cs"/>
-    <Compile Include="OOMapProperty.cs"/>
-    <Compile Include="OOStyles.cs"/>
-    <Compile Include="TableOfContent.cs"/>
+    <Compile Include="OOMetaXML.cs" />
+    <Compile Include="OOExportOpenOffice.cs" />
+    <Compile Include="OOStyleBase.cs" />
+    <Compile Include="OOMapProperty.cs" />
+    <Compile Include="OOStyles.cs" />
+    <Compile Include="TableOfContent.cs" />
     <Compile Include="OOUtility.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs"/>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -243,7 +244,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="app.config"/>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -260,7 +261,7 @@
       <Name>CssParser</Name>
     </ProjectReference>
     <ProjectReference Include="..\PsTool\PsTool.csproj">
-      <Project>{448F846F-CE23-462C-BF7E-827875A36F82}</Project>
+      <Project>{448f846f-ce23-462c-bf7e-827875a36f82}</Project>
       <Name>PsTool</Name>
     </ProjectReference>
   </ItemGroup>
@@ -281,7 +282,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets"/>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
