--- a/src/PsTool/PsTool.csproj
+++ b/src/PsTool/PsTool.csproj
@@ -256,6 +256,15 @@
     <Compile Include="Progress.Designer.cs">
       <DependentUpon>Progress.cs</DependentUpon>
     </Compile>
+    <Compile Include="Progress\IExportContents.cs" />
+    <Compile Include="Progress\IExporter.cs" />
+    <Compile Include="Progress\IInProcess.cs" />
+    <Compile Include="Progress\InProcess.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Progress\InProcess.Designer.cs">
+      <DependentUpon>InProcess.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -318,6 +327,10 @@
     <EmbeddedResource Include="Progress.resx">
       <DependentUpon>Progress.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Progress\InProcess.resx">
+      <DependentUpon>InProcess.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -339,6 +352,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
