--- a/src/BuildStep/BuildStep.csproj
+++ b/src/BuildStep/BuildStep.csproj
@@ -210,6 +210,11 @@
   <ItemGroup>
     <EmbeddedResource Include="ApplicationTemplate.wxs" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="XeLaTexTemplate.wxs">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
