--- a/src/BuildPathwaySprint.csproj
+++ b/src/BuildPathwaySprint.csproj
@@ -449,13 +449,13 @@
     <MSBuild.ExtensionPack.FileSystem.Folder TaskAction="Get" Path="XeLaTexConvert" Match="TexLive">
       <Output TaskParameter="Folders" ItemName="InstallerDir"/>
     </MSBuild.ExtensionPack.FileSystem.Folder>
-    <MSBuild.ExtensionPack.Framework.TextString TaskAction="Replace" OldString="@InstallerDir@\install-tl.zip" OldValue="@InstallerDir@" NewValue="%(InstallerDir.Identity)">
+    <!-- MSBuild.ExtensionPack.Framework.TextString TaskAction="Replace" OldString="@InstallerDir@\install-tl.zip" OldValue="@InstallerDir@" NewValue="%(InstallerDir.Identity)">
       <Output PropertyName="RepoZip" TaskParameter="NewString"/>
-    </MSBuild.ExtensionPack.Framework.TextString>
-    <Message Text="cmd: $(cmd2)" Importance="high" />
+    </MSBuild.ExtensionPack.Framework.TextString -->
     <Message Text="InstallerDir: %(InstallerDir.Identity)" Importance="high" />
 
-    <MSBuild.ExtensionPack.Web.WebClient TaskAction="DownloadFile" Url="%(repo.Identity)/install-tl.zip" FileName="$(RepoZip)"/>
+    <!-- MSBuild.ExtensionPack.Web.WebClient TaskAction="DownloadFile" Url="%(repo.Identity)/install-tl.zip" FileName="$(RepoZip)"/ -->
+	<Exec Command="wget http://mirror.ctan.org/systems/texlive/tlnet/install-tl.zip" WorkingDirectory="%(InstallerDir.Identity)"/>
     <Exec Command="dir %(InstallerDir.Identity)"/>
     <MSBuild.ExtensionPack.Compression.Zip TaskAction="Extract" ExtractPath="%(InstallerDir.Identity)" ZipFileName="%(InstallerDir.Identity)\install-tl.zip"/>
     <Exec Command="dir %(InstallerDir.Identity)\*.bat /s"/>
@@ -471,7 +471,7 @@
       <Output PropertyName="ArchiveName" TaskParameter="NewString"/>
     </MSBuild.ExtensionPack.Framework.TextString>
     <Message Text="ArchiveName: $(ArchiveName)" Importance="high" />
-    <MSBuild.ExtensionPack.Web.WebClient TaskAction="DownloadFile" Url="%(repo.Identity)/install-tl.zip" FileName="$(ArchiveName)"/>
+    <MSBuild.ExtensionPack.Web.WebClient TaskAction="DownloadFile" Url="http://mirror.ctan.org/systems/texlive/tlnet/install-tl.zip" FileName="$(ArchiveName)"/>
     <Exec Command="tar -xzf install-tl-unx.tar.gz" WorkingDirectory="%(InstallerWorkDir.Identity)"/>
   </Target>
 
